--- a/html/benchmark.template.html
+++ b/html/benchmark.template.html
@@ -2,7 +2,6 @@
   <meta charset="utf-8">
 <head>
   <title>MODULE BENCHMARK</title>
-  <link rel="preload" as="script" href="../js/helper.js">
 $headers
 </head>
 <body>
@@ -13,15 +12,18 @@ $info
   <h2>Results</h2>
   <pre id="log"></pre>
 
-  <script src="../js/helper.js"></script>
-  <script src="../js/marker/start.js"></script>
-  <script>
-    timeStart("loadModules");
-  </script>
   $scripts
   <script type="module">
-    runModuleBenchmark(import("$module"));
+    performance.mark('importStart');
+    import("$module").then(() => {
+      performance.mark('importEnd');
+      const results = {
+        navigationResponseStart: performance.getEntriesByType('navigation')[0].responseStart,
+        importStart: performance.getEntriesByName('importStart')[0].startTime,
+        importEnd: performance.getEntriesByName('importEnd')[0].startTime
+      };
+      document.getElementById('log').innerText = JSON.stringify(results);
+    });
   </script>
-  <script src="../js/marker/end.js"></script>
 </body>
 </html>
